kubernetes/base/backend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-crud-backend-canary
spec:
  selector:
    app: product-crud-backend
  ports:
    - port: 8080
      targetPort: 8080
