kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-crud-frontend
  namespace: product-crud
spec:
  type: ClusterIP
  selector:
    app: product-crud-frontend
  ports:
    - port: 80
      targetPort: 80
